--- a/app-name.template.json
+++ b/app-name.template.json
@@ -6,6 +6,10 @@
     "homepage": "",
     "license": "",
     "notes": "",
+    "depends": "",
+    "suggest": {
+        "App Name": "manifest"
+    },
     "architecture": {
         "64bit": {
             "url": "",
@@ -20,6 +24,8 @@
             "hash": ""
         }
     },
+    "extract_dir": "",
+    "extract_to": "",
     "pre_install": "",
     "installer": {
         "script": ""
@@ -28,15 +34,31 @@
         "",
         ""
     ],
-    "uninstaller": {
-        "script": ""
-    },
-    "bin": "",
     "env_add_path": [
         "",
         ""
     ],
+    "env_set": {
+        "ENV_VAR_NAME": "value"
+    },
+    "bin": "",
+    "shortcuts": [
+        [
+            "app.exe",
+            "App Name",
+            "--args",
+            "icon.ico"
+        ]
+    ],
     "persist": [
+        "",
+        ""
+    ],
+    "pre_uninstall": "",
+    "uninstaller": {
+        "script": ""
+    },
+    "post_uninstall": [
         "",
         ""
     ],
